--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -7,109 +7,84 @@
     android:background="#ffffff"
     tools:context="com.example.athira.sahapaadi.LoginPage">
 
-    <TextView
-        android:id="@+id/logo_text1"
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Sahapaadi"
-        android:textColor="#ff5252"
-        android:textAlignment="center"
-        android:textStyle="bold"
-        android:textSize="30dp"
+        android:layout_marginTop="42dp"
+        app:srcCompat="@drawable/sp"
         android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="58dp" />
+        android:layout_margin="20dp"
+        android:id="@+id/linearLayout2">
 
-    <EditText
-        android:id="@+id/emailLoginField"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/passwordLoginText"
-        android:layout_alignLeft="@+id/logo_text1"
-        android:layout_alignStart="@+id/logo_text1"
-        android:layout_marginBottom="42dp"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:visibility="visible"
-        android:layout_alignRight="@+id/ButtonRegister"
-        android:layout_alignEnd="@+id/ButtonRegister" />
+        <EditText
+            android:id="@+id/loginEmailID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/imageView"
+            android:layout_alignRight="@+id/imageView"
+            android:layout_below="@+id/imageView"
+            android:layout_marginTop="37dp"
+            android:ems="10"
+            android:hint="Email iD"
+            android:inputType="textWebEmailAddress" />
 
-    <EditText
-        android:id="@+id/passwordLoginField"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/emailLoginField"
-        android:layout_alignStart="@+id/emailLoginField"
-        android:layout_centerVertical="true"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:textAppearance="@style/TextAppearance.AppCompat"
-        android:layout_alignRight="@+id/ButtonRegister"
-        android:layout_alignEnd="@+id/ButtonRegister" />
-
-    <TextView
-        android:id="@+id/passwordLoginText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Password"
-        android:textColor="#000000"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        android:layout_centerVertical="true"
-        android:layout_alignLeft="@+id/emailLoginText"
-        android:layout_alignStart="@+id/emailLoginText" />
-
-    <TextView
-        android:id="@+id/emailLoginText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Email ID"
-        android:textColor="#000000"
-        android:textSize="15dp"
-        android:textStyle="bold"
-        android:layout_alignBaseline="@+id/emailLoginField"
-        android:layout_alignBottom="@+id/emailLoginField"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentStart="true"
-        android:layout_marginLeft="25dp"
-        android:layout_marginStart="25dp" />
+        <EditText
+            android:id="@+id/loginPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/loginEmailID"
+            android:layout_alignStart="@+id/loginEmailID"
+            android:layout_below="@+id/loginEmailID"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:hint="********"
+            android:inputType="textPassword" />
+    </LinearLayout>
 
     <Button
         android:id="@+id/buttonLogin"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="38dp"
-        android:text="LogIn"
-        android:onClick="loginClick"
-        android:layout_below="@+id/passwordLoginField"
-        android:layout_alignLeft="@+id/passwordLoginField"
-        android:layout_alignStart="@+id/passwordLoginField" />
+        android:layout_alignEnd="@+id/linearLayout2"
+        android:layout_alignLeft="@+id/linearLayout2"
+        android:layout_alignRight="@+id/linearLayout2"
+        android:layout_alignStart="@+id/linearLayout2"
+        android:layout_below="@+id/linearLayout2"
+        android:text="Login"
+        android:onClick="loginClick"/>
 
     <Button
-        android:id="@+id/ButtonRegister"
+        android:id="@+id/buttonSignup"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:onClick="sendMessage"
-        android:text="Register"
-        android:layout_alignBaseline="@+id/buttonLogin"
-        android:layout_alignBottom="@+id/buttonLogin"
-        android:layout_toRightOf="@+id/logo_text1"
-        android:layout_toEndOf="@+id/logo_text1" />
-
-    <TextView
-        android:id="@+id/forgotpasswordText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_alignEnd="@+id/buttonLogin"
         android:layout_alignLeft="@+id/buttonLogin"
+        android:layout_alignRight="@+id/buttonLogin"
         android:layout_alignStart="@+id/buttonLogin"
         android:layout_below="@+id/buttonLogin"
-        android:layout_marginLeft="58dp"
-        android:layout_marginStart="58dp"
-        android:layout_marginTop="29dp"
+        android:text="SIGNUP"
+        android:onClick="sendMessage"/>
+
+    <TextView
+        android:id="@+id/forgotPassword"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/buttonSignup"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="17dp"
         android:text="Forgot Password?" />
+
 
 </RelativeLayout>
 
