--- a/app/src/main/res/layout/activity_login_details.xml
+++ b/app/src/main/res/layout/activity_login_details.xml
@@ -1,65 +1,94 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context="com.example.athira.sahapaadi.ProfileUpdate"
-    android:gravity="center_vertical"
-    android:layout_margin="16dp"
-    >
+    android:background="#ffffff"
+    tools:context="com.example.athira.sahapaadi.LoginPage">
 
-    <EditText
-        android:id="@+id/nameField"
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="21dp"
+        app:srcCompat="@drawable/sp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true" />
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName"
-        android:hint="User Name"
-        android:layout_marginBottom="8dp"
+        android:orientation="vertical"
+        android:layout_below="@+id/imageView"
+        android:layout_centerHorizontal="true"
+        android:layout_margin="20dp"
+        android:id="@+id/profileUpdateLinearLayout">
 
-        />
+        <EditText
+            android:id="@+id/university"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignEnd="@+id/imageView"
+            android:layout_alignRight="@+id/imageView"
+            android:layout_below="@+id/imageView"
+            android:layout_marginTop="0dp"
+            android:ems="10"
+            android:hint="Username"
+            android:inputType="textPersonName" />
 
-    <EditText
-        android:id="@+id/emailidField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textEmailAddress"
-        android:hint="Email"
-        android:layout_marginBottom="8dp"
-        />
+        <EditText
+            android:id="@+id/signupEmailID"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/university"
+            android:layout_alignStart="@+id/university"
+            android:layout_below="@+id/university"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:hint="Email ID"
+            android:inputType="textWebEmailAddress" />
 
-    <EditText
-        android:id="@+id/passwordField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:hint="Password"
-        android:layout_marginBottom="8dp"/>
+        <EditText
+            android:id="@+id/signupPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/university"
+            android:layout_alignStart="@+id/university"
+            android:layout_below="@+id/university"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:hint="Password"
+            android:inputType="textPassword" />
 
-
-    <EditText
-        android:id="@+id/confirmPasswordText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:hint="Confirm Password"
-        android:layout_marginBottom="8dp"
-        />
+        <EditText
+            android:id="@+id/signupConfirmPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignLeft="@+id/university"
+            android:layout_alignStart="@+id/university"
+            android:layout_below="@+id/university"
+            android:layout_marginTop="10dp"
+            android:ems="10"
+            android:hint="Confirm Password"
+            android:inputType="textPassword" />
+    </LinearLayout>
 
     <Button
-        android:id="@+id/buttonProfileRegister"
+        android:id="@+id/buttonSignupNext"
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:text="NEXT"
+        android:layout_alignEnd="@+id/profileUpdateLinearLayout"
+        android:layout_alignLeft="@+id/profileUpdateLinearLayout"
+        android:layout_alignRight="@+id/profileUpdateLinearLayout"
+        android:layout_alignStart="@+id/profileUpdateLinearLayout"
+        android:layout_below="@+id/profileUpdateLinearLayout"
+        android:text="Next"
         android:onClick="sendMessage"/>
 
 
 
-</LinearLayout>
+</RelativeLayout>
+
+
