--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -23,10 +23,10 @@
         android:layout_below="@+id/imageView"
         android:layout_centerHorizontal="true"
         android:layout_margin="20dp"
-        android:id="@+id/linearLayout2">
+        android:id="@+id/profileUpdateLinearLayout">
 
         <EditText
-            android:id="@+id/loginEmailID"
+            android:id="@+id/university"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignEnd="@+id/imageView"
@@ -41,9 +41,9 @@
             android:id="@+id/loginPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/loginEmailID"
-            android:layout_alignStart="@+id/loginEmailID"
-            android:layout_below="@+id/loginEmailID"
+            android:layout_alignLeft="@+id/university"
+            android:layout_alignStart="@+id/university"
+            android:layout_below="@+id/university"
             android:layout_marginTop="10dp"
             android:ems="10"
             android:hint="********"
@@ -55,11 +55,11 @@
         style="@style/Widget.AppCompat.Button.Colored"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/linearLayout2"
-        android:layout_alignLeft="@+id/linearLayout2"
-        android:layout_alignRight="@+id/linearLayout2"
-        android:layout_alignStart="@+id/linearLayout2"
-        android:layout_below="@+id/linearLayout2"
+        android:layout_alignEnd="@+id/profileUpdateLinearLayout"
+        android:layout_alignLeft="@+id/profileUpdateLinearLayout"
+        android:layout_alignRight="@+id/profileUpdateLinearLayout"
+        android:layout_alignStart="@+id/profileUpdateLinearLayout"
+        android:layout_below="@+id/profileUpdateLinearLayout"
         android:text="Login"
         android:onClick="loginClick"/>
 
