--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -2,22 +2,27 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item
         android:id="@+id/navHome"
-        android:title="Home" />
+        android:title="Home"
+        android:icon="@mipmap/ic_home_black_24dp"/>
     <item
         android:id="@+id/navProfile"
-        android:title="My Profile" />
+        android:title="My Profile"
+        android:icon="@mipmap/ic_person_black_24dp"/>
     <item
         android:id="@+id/navDownloads"
-        android:title="Downloads" />
+        android:title="Downloads"
+        android:icon="@mipmap/ic_file_download_black_24dp"/>
     <item
         android:id="@+id/navNotification"
-        android:title="Notification" />
+        android:title="Notification"
+        android:icon="@mipmap/ic_notifications_black_24dp"/>
     <item
         android:id="@+id/navTimetable"
-        android:title="Timetable" />
+        android:title="Timetable"
+        android:icon="@mipmap/ic_av_timer_black_24dp"/>
     <item
         android:id="@+id/navArchives"
-        android:title="Archives" />
+        android:title="Archives"/>
 
 
 </menu>
