--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -1,90 +1,182 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#ffffff"
-    tools:context="com.example.athira.sahapaadi.LoginPage">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/bubble_background"
+    android:orientation="vertical"
+    >
 
-    <ImageView
-        android:id="@+id/imageView"
+  <!--<ImageView-->
+  <!--android:id="@+id/imageView"-->
+  <!--android:layout_width="wrap_content"-->
+  <!--android:layout_height="wrap_content"-->
+  <!--android:layout_marginTop="42dp"-->
+  <!--app:srcCompat="@drawable/sp"-->
+  <!--android:layout_alignParentTop="true"-->
+  <!--android:layout_centerHorizontal="true" />-->
+
+  <LinearLayout
+      android:id="@+id/buttonSignup"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:layout_marginLeft="130dp"
+      android:layout_marginTop="100dp"
+      android:background="@drawable/roundedrect"
+      android:orientation="horizontal"
+      android:padding="16dp"
+      >
+
+    <FrameLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="42dp"
-        app:srcCompat="@drawable/sp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true" />
+        android:layout_gravity="center"
+        android:layout_marginLeft="1dp"
+        >
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_below="@+id/imageView"
-        android:layout_centerHorizontal="true"
-        android:layout_margin="20dp"
-        android:id="@+id/profileUpdateLinearLayout">
+      <ImageView
+          android:layout_width="60dp"
+          android:layout_height="60dp"
+          android:src="@drawable/rect1"
+          />
 
-        <EditText
-            android:id="@+id/university"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignEnd="@+id/imageView"
-            android:layout_alignRight="@+id/imageView"
-            android:layout_below="@+id/imageView"
-            android:layout_marginTop="37dp"
-            android:ems="10"
-            android:hint="Email iD"
-            android:inputType="textWebEmailAddress" />
+      <ImageView
+          android:layout_width="40dp"
+          android:layout_height="40dp"
+          android:layout_gravity="center"
+          android:paddingLeft="3dp"
+          android:src="@drawable/bag"
+          />
 
-        <EditText
-            android:id="@+id/loginPassword"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignLeft="@+id/university"
-            android:layout_alignStart="@+id/university"
-            android:layout_below="@+id/university"
-            android:layout_marginTop="10dp"
-            android:ems="10"
-            android:hint="********"
-            android:inputType="textPassword" />
-    </LinearLayout>
-
-    <Button
-        android:id="@+id/buttonLogin"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/profileUpdateLinearLayout"
-        android:layout_alignLeft="@+id/profileUpdateLinearLayout"
-        android:layout_alignRight="@+id/profileUpdateLinearLayout"
-        android:layout_alignStart="@+id/profileUpdateLinearLayout"
-        android:layout_below="@+id/profileUpdateLinearLayout"
-        android:text="Login"
-        android:onClick="loginClick"/>
-
-    <Button
-        android:id="@+id/buttonSignup"
-        style="@style/Widget.AppCompat.Button.Colored"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignEnd="@+id/buttonLogin"
-        android:layout_alignLeft="@+id/buttonLogin"
-        android:layout_alignRight="@+id/buttonLogin"
-        android:layout_alignStart="@+id/buttonLogin"
-        android:layout_below="@+id/buttonLogin"
-        android:text="SIGNUP"
-        android:onClick="sendMessage"/>
+    </FrameLayout>
 
     <TextView
-        android:id="@+id/forgotPassword"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/buttonSignup"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="17dp"
-        android:text="Forgot Password?" />
+        android:layout_gravity="center"
+        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
+        android:text="Get Started"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
+        android:textColor="#c3ffffff"
+        android:textStyle="bold"
+        />
+  </LinearLayout>
 
+
+  <LinearLayout
+      android:id="@+id/login"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      android:orientation="vertical"
+      android:paddingTop="25dp"
+      >
+
+    <FrameLayout
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:background="#34ffffff"
+        >
+
+      <EditText
+          android:id="@+id/loginEmailID"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_margin="10dp"
+          android:background="@android:color/transparent"
+          android:ems="10"
+          android:hint="Email ID"
+          android:inputType="textWebEmailAddress"
+          android:textColor="#fff"
+          android:textColorHint="#a8ffffff"
+          />
+    </FrameLayout>
+
+    <FrameLayout
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:background="#34ffffff"
+        >
+
+      <EditText
+          android:id="@+id/loginPassword"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_margin="10dp"
+          android:background="@android:color/transparent"
+          android:ems="10"
+          android:hint="Password"
+          android:inputType="textPassword"
+          android:textColor="#fff"
+          android:textColorHint="#a8ffffff"
+          />
+    </FrameLayout>
+
+  </LinearLayout>
+
+  <LinearLayout
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_below="@id/login"
+      android:layout_centerInParent="true"
+      android:orientation="vertical"
+      >
+
+    <FrameLayout
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/login_background"
+        >
+
+      <TextView
+          android:id="@+id/buttonLogin"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center"
+          android:text="Login now"
+          android:textColor="#c3ffffff"
+          />
+
+    </FrameLayout>
+
+    <TextView
+        android:id="@+id/buttonForgot"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="25dp"
+        android:text="Forgot Password?"
+        android:textColor="#c3ffffff"
+        android:textSize="12sp"
+        />
+
+  </LinearLayout>
+
+  <com.github.glomadrian.grav.GravView
+      android:id="@+id/grav"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_centerInParent="true"
+      app:colorGenerator="com.github.glomadrian.grav.generator.paint.ArrayColorGenerator"
+      app:array_colors="@array/bubble"
+      app:pointGenerator="com.github.glomadrian.grav.generator.point.RegularPointGenerator"
+      app:regular_cell_size="300"
+      app:regular_variance="200"
+      app:gravGenerator="com.github.glomadrian.grav.generator.grav.BallGenerator"
+      app:ball_from_size="10dp"
+      app:ball_to_size="20dp"
+      app:animationGenerators="@array/BubbleAnimations"
+      app:side_to_side_min_duration="10000"
+      app:side_to_side_max_duration="10000"
+      app:side_to_side_direction="leftToRight"
+      app:shake_direction="vertical"
+      app:shake_min_duration="10000"
+      app:shake_max_duration="20000"
+      app:shake_variance="500dp"
+      />
 
 </RelativeLayout>
-
