--- a/app/src/main/res/layout/activity_home_page.xml
+++ b/app/src/main/res/layout/activity_home_page.xml
@@ -41,10 +41,7 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         app:menu="@menu/navigation_menu"
-        android:layout_gravity="start"/>
-
-        <!--app:headerLayout="@layout/navigation_header"-->
-        <!--&gt;-->
-    <!--</android.support.design.widget.NavigationView>-->
+        android:layout_gravity="start"
+        app:headerLayout="@layout/navigation_header"/>
 
 </android.support.v4.widget.DrawerLayout>
