--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -1,30 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--<item-->
-        <!--android:id="@+id/navHome"-->
-        <!--android:title="Home"-->
-        <!--android:icon="@mipmap/ic_home_black_24dp"-->
-        <!--/>-->
-    <!--<item-->
-        <!--android:id="@+id/navProfile"-->
-        <!--android:title="My Profile"-->
-        <!--android:icon="@mipmap/ic_person_black_24dp"/>-->
-    <!--<item-->
-        <!--android:id="@+id/navDownloads"-->
-        <!--android:title="Downloads"-->
-        <!--android:icon="@mipmap/ic_file_download_black_24dp"/>-->
-    <!--<item-->
-        <!--android:id="@+id/navNotification"-->
-        <!--android:title="Notification"-->
-        <!--android:icon="@mipmap/ic_notifications_black_24dp"/>-->
-    <!--<item-->
-        <!--android:id="@+id/navTimetable"-->
-        <!--android:title="Timetable"-->
-        <!--android:icon="@mipmap/ic_av_timer_black_24dp"/>-->
-    <!--<item-->
-        <!--android:id="@+id/navArchives"-->
-        <!--android:title="Archives"/>-->
+    <item
+        android:id="@+id/navHome"
+        android:title="Home"
+        android:icon="@mipmap/ic_home_black_24dp"
+        />
+    <item
+        android:id="@+id/navProfile"
+        android:title="My Profile"
+        android:icon="@mipmap/ic_person_black_24dp"/>
+    <item
+        android:id="@+id/navDownloads"
+        android:title="Downloads"
+        android:icon="@mipmap/ic_file_download_black_24dp"/>
+    <item
+        android:id="@+id/navNotification"
+        android:title="Notification"
+        android:icon="@mipmap/ic_notifications_black_24dp"/>
+    <item
+        android:id="@+id/navTimetable"
+        android:title="Timetable"
+        android:icon="@mipmap/ic_av_timer_black_24dp"/>
+    <item
+        android:id="@+id/navArchives"
+        android:title="Settings"
+        android:icon="@mipmap/ic_settings_black_24dp"/>
 
 
 </menu>
