--- a/app/src/main/res/layout/activity_profile_update.xml
+++ b/app/src/main/res/layout/activity_profile_update.xml
@@ -1,138 +1,174 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@drawable/bubble_background"
     android:orientation="vertical"
     >
 
 
+  <com.yalantis.jellytoolbar.widget.JellyToolbar
+      android:id="@+id/toolbar"
+      android:layout_width="match_parent"
+      android:layout_height="wrap_content"
+      android:background="@color/colorPrimary"
+      app:cancelIcon="@drawable/ic_close"
+      app:endColor="@color/colorEnd"
+      app:icon="@drawable/ic_info_white_18dp"
+      app:startColor="@color/colorStart"
+      app:title="@string/Register"
+      app:titleTextColor="@android:color/white"
+      />
 
-    <LinearLayout
-        android:id="@+id/login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:orientation="vertical"
+  <LinearLayout
+      android:id="@+id/login"
+      android:layout_width="wrap_content"
+      android:layout_height="wrap_content"
+      android:layout_centerInParent="true"
+      android:orientation="vertical"
+      >
+
+    <FrameLayout
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:background="#34ffffff"
         >
 
-        <FrameLayout
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:background="#34ffffff"
-            >
+      <Spinner
+          android:id="@+id/university"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_margin="10dp"
+          android:background="@android:color/transparent"
+          />
 
-        <EditText
-            android:id="@+id/university"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:ems="10"
-            android:hint="University"
-            android:background="@android:color/transparent"
-            android:textColor="#fff"
-            android:textColorHint="#a8ffffff"
-            android:inputType="text|textPersonName" />
-        </FrameLayout>
-        <FrameLayout
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:background="#34ffffff"
-            android:layout_marginTop="20dp"
-            >
-        <EditText
-            android:id="@+id/program"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:ems="10"
-            android:hint="Program"
-            android:background="@android:color/transparent"
-            android:textColor="#fff"
-            android:textColorHint="#a8ffffff"
-            android:inputType="text|textWebEmailAddress" />
-        </FrameLayout>
-        <FrameLayout
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:background="#34ffffff"
-            android:layout_marginTop="20dp"
-            >
-        <EditText
-            android:id="@+id/schema"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:ems="10"
-            android:hint="Schema"
-            android:background="@android:color/transparent"
-            android:textColor="#fff"
-            android:textColorHint="#a8ffffff"
-            android:inputType="number" />
-        </FrameLayout>
-        <FrameLayout
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:background="#34ffffff"
-            android:layout_marginTop="20dp"
-            >
-        <EditText
-            android:id="@+id/semester"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:ems="10"
-            android:background="@android:color/transparent"
-            android:textColor="#fff"
-            android:textColorHint="#a8ffffff"
-            android:hint="Semester"
-            android:inputType="number" />
-        </FrameLayout>
+      <!--<EditText-->
+      <!--android:layout_width="match_parent"-->
+      <!--android:layout_height="wrap_content"-->
+      <!--android:layout_margin="10dp"-->
+      <!--android:ems="10"-->
+      <!--android:hint="University"-->
+      <!--android:background="@android:color/transparent"-->
+      <!--android:textColor="#fff"-->
+      <!--android:textColorHint="#a8ffffff"-->
+      <!--android:inputType="text|textPersonName" />-->
+    </FrameLayout>
+    <FrameLayout
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:background="#34ffffff"
+        >
+      <Spinner
+          android:id="@+id/program"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_margin="10dp"
+          android:background="@android:color/transparent"
+          />
 
-        <FrameLayout
-            android:layout_width="300dp"
-            android:layout_height="50dp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginTop="25dp"
-            android:background="@drawable/login_background"
-            >
+      <!--<EditText-->
+          <!--android:layout_width="match_parent"-->
+          <!--android:layout_height="wrap_content"-->
+          <!--android:layout_margin="10dp"-->
+          <!--android:background="@android:color/transparent"-->
+          <!--android:ems="10"-->
+          <!--android:hint="Program"-->
+          <!--android:inputType="text|textWebEmailAddress"-->
+          <!--android:textColor="#fff"-->
+          <!--android:textColorHint="#a8ffffff"-->
+          <!--/>-->
+    </FrameLayout>
+    <FrameLayout
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:background="#34ffffff"
+        >
+      <Spinner
+          android:id="@+id/schema"
+          android:layout_width="match_parent"
+          android:layout_height="match_parent"
+          android:layout_margin="10dp"
+          android:background="@android:color/transparent"
+          />
+      <!--<EditText-->
+          <!--android:layout_width="match_parent"-->
+          <!--android:layout_height="wrap_content"-->
+          <!--android:layout_margin="10dp"-->
+          <!--android:background="@android:color/transparent"-->
+          <!--android:ems="10"-->
+          <!--android:hint="Schema"-->
+          <!--android:inputType="number"-->
+          <!--android:textColor="#fff"-->
+          <!--android:textColorHint="#a8ffffff"-->
+          <!--/>-->
+    </FrameLayout>
+    <FrameLayout
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_marginTop="20dp"
+        android:background="#34ffffff"
+        >
+      <EditText
+          android:id="@+id/semester"
+          android:layout_width="match_parent"
+          android:layout_height="wrap_content"
+          android:layout_margin="10dp"
+          android:background="@android:color/transparent"
+          android:ems="10"
+          android:maxLength="2"
+          android:hint="Semester"
+          android:inputType="number"
+          android:textColor="#fff"
+          android:textColorHint="#000"
+          />
+    </FrameLayout>
 
-            <TextView
-                android:id="@+id/buttonSignup"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:text="SIGNUP"
-                android:textColor="#c3ffffff"
-                />
+    <FrameLayout
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="25dp"
+        android:background="@drawable/login_background"
+        android:id="@+id/buttonSignup"
+        >
 
-        </FrameLayout>
+      <TextView
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_gravity="center"
+          android:text="SIGNUP"
+          android:textColor="#c3ffffff"
+          />
 
-    </LinearLayout>
+    </FrameLayout>
 
-    <com.github.glomadrian.grav.GravView
-        android:id="@+id/grav"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_centerInParent="true"
-        app:colorGenerator="com.github.glomadrian.grav.generator.paint.ArrayColorGenerator"
-        app:array_colors="@array/bubble"
-        app:pointGenerator="com.github.glomadrian.grav.generator.point.RegularPointGenerator"
-        app:regular_cell_size="300"
-        app:regular_variance="200"
-        app:gravGenerator="com.github.glomadrian.grav.generator.grav.BallGenerator"
-        app:ball_from_size="10dp"
-        app:ball_to_size="20dp"
-        app:animationGenerators="@array/BubbleAnimations"
-        app:side_to_side_min_duration="10000"
-        app:side_to_side_max_duration="10000"
-        app:side_to_side_direction="leftToRight"
-        app:shake_direction="vertical"
-        app:shake_min_duration="10000"
-        app:shake_max_duration="20000"
-        app:shake_variance="500dp"
-        />
+  </LinearLayout>
+
+  <com.github.glomadrian.grav.GravView
+      android:id="@+id/grav"
+      android:layout_width="match_parent"
+      android:layout_height="match_parent"
+      android:layout_centerInParent="true"
+      app:animationGenerators="@array/BubbleAnimations"
+      app:array_colors="@array/bubble"
+      app:ball_from_size="10dp"
+      app:ball_to_size="20dp"
+      app:colorGenerator="com.github.glomadrian.grav.generator.paint.ArrayColorGenerator"
+      app:gravGenerator="com.github.glomadrian.grav.generator.grav.BallGenerator"
+      app:pointGenerator="com.github.glomadrian.grav.generator.point.RegularPointGenerator"
+      app:regular_cell_size="300"
+      app:regular_variance="200"
+      app:shake_direction="vertical"
+      app:shake_max_duration="20000"
+      app:shake_min_duration="10000"
+      app:shake_variance="500dp"
+      app:side_to_side_direction="leftToRight"
+      app:side_to_side_max_duration="10000"
+      app:side_to_side_min_duration="10000"
+      />
 
 
 </RelativeLayout>
