--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#747474</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF5252</color>
+    <color name="colorPrimary">#7e6fe2</color>
+    <color name="colorPrimaryDark">#8a53cf</color>
+    <color name="colorAccent">#FF4081</color>
+    <color name="colorEnd">#8463d4</color>
+    <color name="colorStart">#cb5ed9</color>
+    <color name="colorTransparent">#00ffffff</color>
+  <color name="colorBackroundWhite">#f0f2ea</color>
+    <color name="colorGray">#495C67</color>
 </resources>
